Create generic MappedCache for other cached data maps